BMA portfolio showcase overflow fix

--- a/src/styles/page/bristolagency.module.css
+++ b/src/styles/page/bristolagency.module.css
@@ -83,6 +83,7 @@ max-width:250px;
     width:100%;
     border-radius: 5px;
     margin-bottom: 30px;
+    overflow: hidden;
 }
 
 .egServicesCon {
